<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<item android:id="@+id/menu_spiner_anim"-->
        <!--android:actionViewClass="ch.eiafr.hugginess.tools.AnimatedSyncImageView"-->
        <!--android:showAsAction="always" />-->
        <!--android:visible="false"-->
    <item
        android:id="@+id/menu_sort_hug"
        android:title="search"
        android:showAsAction="ifRoom"
        android:visible="false"
        android:actionViewClass="android.widget.Spinner" />

    <item
        android:id="@+id/menu_sort_order_hug"
        android:title="search order"
        android:showAsAction="ifRoom"
        android:visible="false"
        android:icon="@drawable/arrow_down" />

    <item android:id="@+id/menu_prefs"
        android:title="@string/main_menu_app_settings" />


    <item
        android:id="@+id/menu_bt_settings"
        android:orderInCategory="100"
        android:title="@string/main_menu_bt_settings" />

    <item
        android:id="@+id/menu_about"
        android:orderInCategory="100"
        android:title="@string/main_menu_about" />
</menu>